required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed imageObj->saveImage() sends unnecessary headers (#3418)

- Avoid automatically regenerating maplexer.c (#2310)

- Change rounding rules for average resampling (#1932)

- Implement support for filename encryption per RFC 18 for rasters (#3416)

- Fixed segfault when using shapefile with empty geometry and tileindex (#3365)

- Avoid race condition on core_lock on win32 mutex init (#3396)

- Avoid use of inline keyword for C code (#3327)

- Support WFS parsing through libxml2 (#3364)

- Fixed PHP/MapScript imageObj->saveImage() function (#3410)

- Implement wms_nonsquare_ok metadata item for WMS servers that do
  not support non-square pixels (#3409)

- Fixed MapScript shape->classindex is always 0 (#3406)

- Fixed PHP MapScript integer passing broken on 64bit systems (#3412)

- Fix MS_NONSQUARE to work in mode=map (#3413)

- Support inclusion of raster layers in query map drawing even if the results
  may not be that useful (#1842).

- Fixed auto angle: incorrectly rotated Labels. Added AUTO2 angle mode. (#1688)

- Preliminary implementation of validity mask (imageObj->img_mask) for raw
  raster data (#2181)

- Added libgd < 2.0.30 compatibility (#3293)

- Incorporate support for GDAL nodata on RGB images (#2404)

- Incorporated support for GDAL masks (GDAL RFC 15) (#2640)

- Fixed XML transformation issues with expressions and symbols (#3397)

- Check error returns from mapstring functions (#2988)

- Add support for multiliple srs in  WFS 1.1.0 (#3227)

- Fixed PHP/MapScript owsRequestObj->loadParams() method when using php in a non cgi/fcgi/cli mode. (#1975)
