@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Improve support for [red/green/blue] classification expressions for
+  raster query (#1021)
+
 - Fixed imageObj->saveImage() sends unnecessary headers (#3418)
 
 - Avoid automatically regenerating maplexer.c (#2310)
